Colab을 통해 생성됨

--- a/0627_python_Dictionaries.ipynb
+++ b/0627_python_Dictionaries.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOs9VvcwniI6VPCxc4Nc2O+",
+      "authorship_tag": "ABX9TyMEMXb5C/+J8wv9WwxdIyWL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -457,6 +457,215 @@
           "name": "stdout",
           "text": [
             "{0: (37.1, 127.1), 1: (37.2, 127.2), 2: (37.3, 127.3)}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "교차로별 대기 차량 수"
+      ],
+      "metadata": {
+        "id": "tHP-lUkuIlZE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "intersections = ['서울역앞', '시청앞', '종로3가', '을지로입구']\n",
+        "waiting_cars = [12, 8, 15, 5]\n",
+        "\n",
+        "# 현재 신호등 상태와 남은 시간\n",
+        "traffic_signals = {}\n",
+        "traffic_signals['서울역앞'] = {'color': '빨강', 'time_left': 25, 'waiting': 12}\n",
+        "traffic_signals['시청앞'] = {'color': '초록', 'time_left': 15, 'waiting': 8}\n",
+        "traffic_signals['종로3가'] = {'color': '빨강', 'time_left': 40, 'waiting': 15}\n",
+        "traffic_signals['을지로입구'] = {'color': '노랑', 'time_left': 3, 'waiting': 5}\n",
+        "\n",
+        "print(\"현재 교차로 상황:\")\n",
+        "for intersection in intersections:\n",
+        "    signal = traffic_signals[intersection]\n",
+        "    print(f\"{intersection}: {signal['color']} {signal['time_left']}초, 대기차량 {signal['waiting']}대\")\n",
+        "\n",
+        "# 우선순위 교차로 선정 (대기차량 10대 이상이면 우선처리)\n",
+        "print(\"\\n우선처리 필요 교차로:\")\n",
+        "for intersection in intersections:\n",
+        "    if traffic_signals[intersection]['waiting'] >= 10:\n",
+        "        print(f\"⚠️ {intersection}: 대기차량 {traffic_signals[intersection]['waiting']}대\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4Rxg-YBCImR2",
+        "outputId": "f1581c34-3573-4c2a-84a3-045b5390bf64"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "현재 교차로 상황:\n",
+            "서울역앞: 빨강 25초, 대기차량 12대\n",
+            "시청앞: 초록 15초, 대기차량 8대\n",
+            "종로3가: 빨강 40초, 대기차량 15대\n",
+            "을지로입구: 노랑 3초, 대기차량 5대\n",
+            "\n",
+            "우선처리 필요 교차로:\n",
+            "⚠️ 서울역앞: 대기차량 12대\n",
+            "⚠️ 종로3가: 대기차량 15대\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "차량 크기별 분류"
+      ],
+      "metadata": {
+        "id": "-HhzKJhAIoGA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vehicle_sizes = ['소형', '중형', '대형', 'SUV']\n",
+        "size_counts = [15, 20, 8, 12]\n",
+        "\n",
+        "# 주차공간 크기별 현황\n",
+        "parking_spaces = {}\n",
+        "parking_spaces['소형전용'] = {'total': 30, 'occupied': 15, 'size_limit': '소형'}\n",
+        "parking_spaces['일반공간'] = {'total': 40, 'occupied': 28, 'size_limit': '중형'}\n",
+        "parking_spaces['대형공간'] = {'total': 15, 'occupied': 8, 'size_limit': '대형'}\n",
+        "parking_spaces['SUV전용'] = {'total': 20, 'occupied': 12, 'size_limit': 'SUV'}\n",
+        "\n",
+        "print(\"주차공간 현황:\")\n",
+        "for space_type in parking_spaces:\n",
+        "    space = parking_spaces[space_type]\n",
+        "    available = space['total'] - space['occupied']\n",
+        "    print(f\"{space_type}: {available}/{space['total']} 가능 ({space['size_limit']} 전용)\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-4VxevEwIpH9",
+        "outputId": "8923e77f-50db-4499-e94e-64c3bb491475"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "주차공간 현황:\n",
+            "소형전용: 15/30 가능 (소형 전용)\n",
+            "일반공간: 12/40 가능 (중형 전용)\n",
+            "대형공간: 7/15 가능 (대형 전용)\n",
+            "SUV전용: 8/20 가능 (SUV 전용)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "군집주행 그룹 정보"
+      ],
+      "metadata": {
+        "id": "gISCDzo5IqpT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "convoy_groups = ['그룹A', '그룹B', '그룹C']\n",
+        "group_vehicles = [[3, 4, 2], [5, 6, 8], [2, 3]]  # 각 그룹의 차량 수\n",
+        "\n",
+        "# 각 그룹별 상세 정보\n",
+        "convoy_info = {}\n",
+        "convoy_info['그룹A'] = {'vehicles': 3, 'leader_speed': 80, 'formation': '일렬'}\n",
+        "convoy_info['그룹B'] = {'vehicles': 5, 'leader_speed': 70, 'formation': '삼각'}\n",
+        "convoy_info['그룹C'] = {'vehicles': 2, 'leader_speed': 90, 'formation': '병렬'}\n",
+        "\n",
+        "print(\"군집주행 현황:\")\n",
+        "for group in convoy_groups:\n",
+        "    info = convoy_info[group]\n",
+        "    print(f\"{group}: {info['vehicles']}대, 속도 {info['leader_speed']}km/h, {info['formation']}대형\")\n",
+        "\n",
+        "# 안전 속도 권장 (5대 이상이면 속도 제한)\n",
+        "print(\"\\n안전 권장사항:\")\n",
+        "for group in convoy_groups:\n",
+        "    info = convoy_info[group]\n",
+        "    if info['vehicles'] >= 5:\n",
+        "        recommended_speed = 60\n",
+        "        print(f\"{group}: 차량 {info['vehicles']}대로 인해 {recommended_speed}km/h 이하 권장\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1gWInPXqIr91",
+        "outputId": "395a7c70-264e-4160-cfd4-37821f05a9f4"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "군집주행 현황:\n",
+            "그룹A: 3대, 속도 80km/h, 일렬대형\n",
+            "그룹B: 5대, 속도 70km/h, 삼각대형\n",
+            "그룹C: 2대, 속도 90km/h, 병렬대형\n",
+            "\n",
+            "안전 권장사항:\n",
+            "그룹B: 차량 5대로 인해 60km/h 이하 권장\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "적합한 주차공간 찾기"
+      ],
+      "metadata": {
+        "id": "6EdKFz72Itry"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "suitable_spaces = []\n",
+        "for space_type in parking_spaces:\n",
+        "    space = parking_spaces[space_type]\n",
+        "    available = space['total'] - space['occupied']\n",
+        "    if space['size_limit'] == new_vehicle and available > 0:\n",
+        "        suitable_spaces.append(space_type)\n",
+        "\n",
+        "if suitable_spaces:\n",
+        "    print(f\"✅ {suitable_spaces[0]}에 주차 가능\")\n",
+        "else:\n",
+        "    print(\"❌ 적합한 주차공간 없음\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y9lk0XZGIuha",
+        "outputId": "c439d2e0-f038-466b-9966-b33b1a787c2b"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ 일반공간에 주차 가능\n"
           ]
         }
       ]
