Colab을 통해 생성됨

--- a/0701_python_자동차_수업.ipynb
+++ b/0701_python_자동차_수업.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM77E9QrtKKayow4Ah4eHyN",
+      "authorship_tag": "ABX9TyMaUSgJoGjQkXq4iAwGCML5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eXFsZdTZXH7-",
-        "outputId": "05ea2ac3-9d2b-4108-c04f-fab3e6778db3"
+        "outputId": "76bfcee5-fe4d-4379-bb66-57b7f2525adf"
       },
       "outputs": [
         {
@@ -101,13 +101,40 @@
         "        print(\"2-15 앞쪽 장애물 없음 → 센서값 유지\")\n",
         "        sensors[\"앞\"] = 15.0\n",
         "\n",
-        "    print(\"2-16 앞쪽 스캔 종료\")\n"
+        "    print(\"2-16 앞쪽 스캔 종료\")\n",
+        "\n",
+        "x = 2\n",
+        "y = 3\n",
+        "obstacles = [(2, 4), (2, 6)]\n",
+        "sensors = {\n",
+        "    \"앞\": 15.0,\n",
+        "    \"왼쪽\": 15.0,\n",
+        "    \"오른쪽\": 15.0\n",
+        "}\n",
+        "\n",
+        "scan_front(x, y, obstacles, sensors)\n",
+        "print(\"📡 최종 센서값:\", sensors)\n"
       ],
       "metadata": {
-        "id": "qciaPsJuaNgl"
+        "id": "qciaPsJuaNgl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2a6b2b4f-b4cd-4812-a34e-2ed8ecee453f"
       },
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2-04 앞쪽 스캔 시작\n",
+            "2-06 앞쪽 1칸 장애물 발견\n",
+            "2-16 앞쪽 스캔 종료\n",
+            "📡 최종 센서값: {'앞': 1.0, '왼쪽': 15.0, '오른쪽': 15.0}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -140,13 +167,45 @@
         "        sensors[\"왼쪽\"] = 15.0\n",
         "        print(\"3-15 왼쪽 장애물 없음 - 센서값 15.0 유지\")\n",
         "\n",
-        "    print(\"4-4 왼쪽 스캔 완료\")\n"
+        "    print(\"4-4 왼쪽 스캔 완료\")\n",
+        "\n",
+        "x = 5\n",
+        "y = 5\n",
+        "obstacles = [\n",
+        "    (4, 5),\n",
+        "    (2, 5),\n",
+        "]\n",
+        "\n",
+        "sensors = {\n",
+        "    \"앞\": 15.0,\n",
+        "    \"왼쪽\": 15.0,\n",
+        "    \"오른쪽\": 15.0\n",
+        "}\n",
+        "\n",
+        "scan_left(x, y, obstacles, sensors)\n",
+        "\n",
+        "print(\"📡 왼쪽 스캔 후 센서값:\", sensors)"
       ],
       "metadata": {
-        "id": "04iLu0ECqs0p"
+        "id": "04iLu0ECqs0p",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "283da840-1867-4f92-d619-4c032eb8ad57"
       },
-      "execution_count": 6,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3-4 왼쪽 스캔 시작\n",
+            "3-7 왼쪽 1칸 장애물 발견\n",
+            "4-4 왼쪽 스캔 완료\n",
+            "📡 왼쪽 스캔 후 센서값: {'앞': 15.0, '왼쪽': 1.0, '오른쪽': 15.0}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -156,6 +215,69 @@
       "metadata": {
         "id": "AqOO6pDBqp5g"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def scan_right(x, y, obstacles, sensors):\n",
+        "    print(\"4-4 오른쪽 스캔 시작\")\n",
+        "\n",
+        "    if (x+1, y) in obstacles:\n",
+        "        print(\"4-7 오른쪽 1칸 장애물 발견\")\n",
+        "        sensors[\"오른쪽\"] = 1.0\n",
+        "\n",
+        "    elif (x+2, y) in obstacles:\n",
+        "        print(\"4-10 오른쪽 2칸 장애물 발견\")\n",
+        "        sensors[\"오른쪽\"] = 2.0\n",
+        "\n",
+        "    elif (x+3, y) in obstacles:\n",
+        "        print(\"4-13 오른쪽 3칸 장애물 발견\")\n",
+        "        sensors[\"오른쪽\"] = 3.0\n",
+        "\n",
+        "    else:\n",
+        "        print(\"4-15 오른쪽 장애물 없음 → 센서값 유지\")\n",
+        "        sensors[\"오른쪽\"] = 15.0\n",
+        "\n",
+        "    print(\"4-16 오른쪽 스캔 종료\\n\")\n",
+        "\n",
+        "x = 5\n",
+        "y = 5\n",
+        "obstacles = [\n",
+        "    (6, 5),\n",
+        "    (8, 5),\n",
+        "]\n",
+        "\n",
+        "sensors = {\n",
+        "    \"앞\": 15.0,\n",
+        "    \"왼쪽\": 15.0,\n",
+        "    \"오른쪽\": 15.0\n",
+        "}\n",
+        "\n",
+        "scan_right(x, y, obstacles, sensors)\n",
+        "\n",
+        "print(\"📡 오른쪽 스캔 후 센서값:\", sensors)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IThIW1ljxQVi",
+        "outputId": "294dc934-0454-48b8-b1f1-de7b90c7b484"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4-4 오른쪽 스캔 시작\n",
+            "4-7 오른쪽 1칸 장애물 발견\n",
+            "4-16 오른쪽 스캔 종료\n",
+            "\n",
+            "📡 오른쪽 스캔 후 센서값: {'앞': 15.0, '왼쪽': 15.0, '오른쪽': 1.0}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -170,32 +292,171 @@
       "cell_type": "code",
       "source": [
         "def update_sensor_data(position, obstacles):\n",
-        "    print(\"5-4 함수 시작\")\n",
+        "    print(\"🟢 5-4 함수 시작\")\n",
         "\n",
         "    x = position[\"x\"]\n",
         "    y = position[\"y\"]\n",
-        "    print(\"5-6 위치 추출 완료\")\n",
-        "    print(\"5-7 현재 x, y값:\", x, y)\n",
+        "    print(\"📌 5-6 위치 추출 완료\")\n",
+        "    print(f\" 5-7 현재 위치: x={x}, y={y}\")\n",
         "\n",
         "    sensors = init_sensors()\n",
-        "    print(\"센서 초기화 완료 → 모든 값 15.0\")\n",
+        "    print(\" 센서 초기화 완료 → 모든 값 15.0\")\n",
         "\n",
+        "\n",
+        "    print(\"앞쪽 스캔 시작\")\n",
         "    scan_front(x, y, obstacles, sensors)\n",
         "\n",
+        "    print(\"왼쪽 스캔 시작\")\n",
         "    scan_left(x, y, obstacles, sensors)\n",
         "\n",
+        "    print(\" 오른쪽 스캔 시작\")\n",
         "    scan_right(x, y, obstacles, sensors)\n",
         "\n",
-        "    print(\"5-17 센서 업데이트 완료\")\n",
-        "    print(\"최종 센서값:\", sensors)\n",
         "\n",
-        "    return sensors\n"
+        "    print(\" 5-17 센서 업데이트 완료\")\n",
+        "    print(\" 최종 센서값:\", sensors)\n",
+        "\n",
+        "    return sensors\n",
+        "\n",
+        "def init_sensors():\n",
+        "    return {\n",
+        "        \"앞\": 15.0,\n",
+        "        \"왼쪽\": 15.0,\n",
+        "        \"오른쪽\": 15.0\n",
+        "    }\n",
+        "\n",
+        "position = {\"x\": 5, \"y\": 5}\n",
+        "obstacles = [\n",
+        "    (5, 6),\n",
+        "    (2, 5),\n",
+        "    (8, 5)\n",
+        "]\n",
+        "\n",
+        "\n",
+        "sensor_data = update_sensor_data(position, obstacles)\n",
+        "print(\"업데이트된 센서 데이터:\", sensor_data)\n"
       ],
       "metadata": {
-        "id": "0aLJASuOitmL"
+        "id": "0aLJASuOitmL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1b0b7f41-8121-4228-b8da-4e39fa06f5e0"
       },
-      "execution_count": 8,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🟢 5-4 함수 시작\n",
+            "📌 5-6 위치 추출 완료\n",
+            " 5-7 현재 위치: x=5, y=5\n",
+            " 센서 초기화 완료 → 모든 값 15.0\n",
+            "앞쪽 스캔 시작\n",
+            "2-04 앞쪽 스캔 시작\n",
+            "2-06 앞쪽 1칸 장애물 발견\n",
+            "2-16 앞쪽 스캔 종료\n",
+            "왼쪽 스캔 시작\n",
+            "3-4 왼쪽 스캔 시작\n",
+            "3-13 왼쪽 3칸 장애물 발견\n",
+            "4-4 왼쪽 스캔 완료\n",
+            " 오른쪽 스캔 시작\n",
+            "4-4 오른쪽 스캔 시작\n",
+            "4-13 오른쪽 3칸 장애물 발견\n",
+            "4-16 오른쪽 스캔 종료\n",
+            "\n",
+            " 5-17 센서 업데이트 완료\n",
+            " 최종 센서값: {'앞': 1.0, '왼쪽': 3.0, '오른쪽': 3.0}\n",
+            "업데이트된 센서 데이터: {'앞': 1.0, '왼쪽': 3.0, '오른쪽': 3.0}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6번 https://claude.ai/public/artifacts/27051f81-4a36-4075-8d2b-ec7199d9a7fb"
+      ],
+      "metadata": {
+        "id": "iH0GQNzAx-G4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def detect_obstacles(sensors, safe_distance):\n",
+        "    print(\"6-4 함수 시작\")\n",
+        "    print(\"6-5 입력 데이터\")\n",
+        "    print(\"sensors와 safe_distance 출력\")\n",
+        "    print(\"센서값:\", sensors)\n",
+        "    print(\"안전 거리:\", safe_distance)\n",
+        "\n",
+        "\n",
+        "    obstacles = []\n",
+        "\n",
+        "\n",
+        "    for direction, distance in sensors.items():\n",
+        "        print(\"6-9 현재 방향과 거리 체크\")\n",
+        "        print(\"방향:\", direction, \"거리:\", distance)\n",
+        "\n",
+        "        if distance < safe_distance:\n",
+        "\n",
+        "            obstacles.append(direction)\n",
+        "            print(\"6-12 위험! 목록에 추가\")\n",
+        "        else:\n",
+        "\n",
+        "            print(\"6-14 안전\")\n",
+        "\n",
+        "    print(\"6-16 장애물 감지 완료\")\n",
+        "    print(\"최종 obstacles 리스트 출력:\", obstacles)\n",
+        "\n",
+        "    return obstacles\n",
+        "\n",
+        "sensors = {\n",
+        "    \"앞\": 3.0,\n",
+        "    \"왼쪽\": 15.0,\n",
+        "    \"오른쪽\": 8.5\n",
+        "}\n",
+        "safe_distance = 10.0\n",
+        "\n",
+        "\n",
+        "obstacle_list = detect_obstacles(sensors, safe_distance)\n",
+        "print(\"감지된 장애물 방향들:\", obstacle_list)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kj9eUkXgyC4g",
+        "outputId": "90243091-b6f5-40d2-cf0d-9b8baedb35e1"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6-4 함수 시작\n",
+            "6-5 입력 데이터\n",
+            "sensors와 safe_distance 출력\n",
+            "센서값: {'앞': 3.0, '왼쪽': 15.0, '오른쪽': 8.5}\n",
+            "안전 거리: 10.0\n",
+            "6-9 현재 방향과 거리 체크\n",
+            "방향: 앞 거리: 3.0\n",
+            "6-12 위험! 목록에 추가\n",
+            "6-9 현재 방향과 거리 체크\n",
+            "방향: 왼쪽 거리: 15.0\n",
+            "6-14 안전\n",
+            "6-9 현재 방향과 거리 체크\n",
+            "방향: 오른쪽 거리: 8.5\n",
+            "6-12 위험! 목록에 추가\n",
+            "6-16 장애물 감지 완료\n",
+            "최종 obstacles 리스트 출력: ['앞', '오른쪽']\n",
+            "감지된 장애물 방향들: ['앞', '오른쪽']\n"
+          ]
+        }
+      ]
     }
   ]
 }
