Colab을 통해 생성됨

--- a/0701_python_자동차_수업.ipynb
+++ b/0701_python_자동차_수업.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMaUSgJoGjQkXq4iAwGCML5",
+      "authorship_tag": "ABX9TyOM0TN4py5dm0XHrS49g0Dg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -457,6 +457,167 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7번  https://claude.ai/public/artifacts/13112488-2160-4216-8845-4187a58f746c"
+      ],
+      "metadata": {
+        "id": "k7VtgjS12nvn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def decide_action(obstacles):\n",
+        "    print(\"🔍 7-4 장애물 정보 입력받음:\", obstacles)\n",
+        "\n",
+        "\n",
+        "    if len(obstacles) == 0:\n",
+        "        print(\"✅ 7-6 장애물 없음 → 직진\")\n",
+        "        action = \"직진\"\n",
+        "\n",
+        "\n",
+        "    elif \"앞\" in obstacles:\n",
+        "        print(\"⚠️ 7-8 앞에 장애물 있음 → 경로 우회 필요\")\n",
+        "\n",
+        "\n",
+        "        if \"왼쪽\" not in obstacles:\n",
+        "            print(\"✅ 7-10 왼쪽 안전 → 좌회전\")\n",
+        "            action = \"좌회전\"\n",
+        "\n",
+        "\n",
+        "        elif \"오른쪽\" not in obstacles:\n",
+        "            print(\"✅ 7-13 오른쪽 안전 → 우회전\")\n",
+        "            action = \"우회전\"\n",
+        "\n",
+        "\n",
+        "        else:\n",
+        "            print(\"⚠️ 7-15 모든 방향에 장애물 → 일단 직진 시도\")\n",
+        "            action = \"직진\"\n",
+        "\n",
+        "\n",
+        "    else:\n",
+        "        print(\"✅ 7-17 앞은 안전 → 조심해서 직진\")\n",
+        "        action = \"주의해서 직진\"\n",
+        "\n",
+        "    print(\"✅ 7-19 최종 결정:\", action)\n",
+        "    return action\n",
+        "\n",
+        "def test_decide_action():\n",
+        "    print(\"🧪 [TEST] decide_action 함수 테스트 시작\\n\")\n",
+        "\n",
+        "    test_cases = [\n",
+        "        ([], \"직진\"),\n",
+        "        ([\"앞\"], \"좌회전\"),\n",
+        "        ([\"앞\", \"왼쪽\"], \"우회전\"),\n",
+        "        ([\"앞\", \"오른쪽\"], \"좌회전\"),\n",
+        "        ([\"앞\", \"왼쪽\", \"오른쪽\"], \"직진\"),\n",
+        "        ([\"왼쪽\"], \"주의해서 직진\"),\n",
+        "        ([\"오른쪽\"], \"주의해서 직진\"),\n",
+        "        ([\"왼쪽\", \"오른쪽\"], \"주의해서 직진\"),\n",
+        "    ]\n",
+        "\n",
+        "    for i, (input_obstacles, expected_action) in enumerate(test_cases):\n",
+        "        print(f\"\\n--- 테스트 케이스 {i+1} ---\")\n",
+        "        result = decide_action(input_obstacles)\n",
+        "        print(f\"✅ 예상: {expected_action}, 결과: {result}\")\n",
+        "        assert result == expected_action, f\"❌ 실패: expected {expected_action} but got {result}\"\n",
+        "\n",
+        "    print(\"\\n🎉 모든 테스트 통과!\")\n",
+        "test_decide_action()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y1NkMyMR2pf-",
+        "outputId": "78b60c5f-8b8f-4e4a-da0a-e4c6f86e0b0c"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🧪 [TEST] decide_action 함수 테스트 시작\n",
+            "\n",
+            "\n",
+            "--- 테스트 케이스 1 ---\n",
+            "🔍 7-4 장애물 정보 입력받음: []\n",
+            "✅ 7-6 장애물 없음 → 직진\n",
+            "✅ 7-19 최종 결정: 직진\n",
+            "✅ 예상: 직진, 결과: 직진\n",
+            "\n",
+            "--- 테스트 케이스 2 ---\n",
+            "🔍 7-4 장애물 정보 입력받음: ['앞']\n",
+            "⚠️ 7-8 앞에 장애물 있음 → 경로 우회 필요\n",
+            "✅ 7-10 왼쪽 안전 → 좌회전\n",
+            "✅ 7-19 최종 결정: 좌회전\n",
+            "✅ 예상: 좌회전, 결과: 좌회전\n",
+            "\n",
+            "--- 테스트 케이스 3 ---\n",
+            "🔍 7-4 장애물 정보 입력받음: ['앞', '왼쪽']\n",
+            "⚠️ 7-8 앞에 장애물 있음 → 경로 우회 필요\n",
+            "✅ 7-13 오른쪽 안전 → 우회전\n",
+            "✅ 7-19 최종 결정: 우회전\n",
+            "✅ 예상: 우회전, 결과: 우회전\n",
+            "\n",
+            "--- 테스트 케이스 4 ---\n",
+            "🔍 7-4 장애물 정보 입력받음: ['앞', '오른쪽']\n",
+            "⚠️ 7-8 앞에 장애물 있음 → 경로 우회 필요\n",
+            "✅ 7-10 왼쪽 안전 → 좌회전\n",
+            "✅ 7-19 최종 결정: 좌회전\n",
+            "✅ 예상: 좌회전, 결과: 좌회전\n",
+            "\n",
+            "--- 테스트 케이스 5 ---\n",
+            "🔍 7-4 장애물 정보 입력받음: ['앞', '왼쪽', '오른쪽']\n",
+            "⚠️ 7-8 앞에 장애물 있음 → 경로 우회 필요\n",
+            "⚠️ 7-15 모든 방향에 장애물 → 일단 직진 시도\n",
+            "✅ 7-19 최종 결정: 직진\n",
+            "✅ 예상: 직진, 결과: 직진\n",
+            "\n",
+            "--- 테스트 케이스 6 ---\n",
+            "🔍 7-4 장애물 정보 입력받음: ['왼쪽']\n",
+            "✅ 7-17 앞은 안전 → 조심해서 직진\n",
+            "✅ 7-19 최종 결정: 주의해서 직진\n",
+            "✅ 예상: 주의해서 직진, 결과: 주의해서 직진\n",
+            "\n",
+            "--- 테스트 케이스 7 ---\n",
+            "🔍 7-4 장애물 정보 입력받음: ['오른쪽']\n",
+            "✅ 7-17 앞은 안전 → 조심해서 직진\n",
+            "✅ 7-19 최종 결정: 주의해서 직진\n",
+            "✅ 예상: 주의해서 직진, 결과: 주의해서 직진\n",
+            "\n",
+            "--- 테스트 케이스 8 ---\n",
+            "🔍 7-4 장애물 정보 입력받음: ['왼쪽', '오른쪽']\n",
+            "✅ 7-17 앞은 안전 → 조심해서 직진\n",
+            "✅ 7-19 최종 결정: 주의해서 직진\n",
+            "✅ 예상: 주의해서 직진, 결과: 주의해서 직진\n",
+            "\n",
+            "🎉 모든 테스트 통과!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "8번 https://claude.ai/public/artifacts/6ddac9ec-2dba-456b-bb09-bf6e277a8a06"
+      ],
+      "metadata": {
+        "id": "RMfE8x5h26Qg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9OzNz4Hb24PX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
