Colab을 통해 생성됨

--- a/0701_python_자동차_수업.ipynb
+++ b/0701_python_자동차_수업.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOM0TN4py5dm0XHrS49g0Dg",
+      "authorship_tag": "ABX9TyNb4YiI0OY0tp2rPooCzSVO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -122,7 +122,7 @@
         },
         "outputId": "2a6b2b4f-b4cd-4812-a34e-2ed8ecee453f"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +193,7 @@
         },
         "outputId": "283da840-1867-4f92-d619-4c032eb8ad57"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +264,7 @@
         "id": "IThIW1ljxQVi",
         "outputId": "294dc934-0454-48b8-b1f1-de7b90c7b484"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,7 +343,7 @@
         },
         "outputId": "1b0b7f41-8121-4228-b8da-4e39fa06f5e0"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,7 +431,7 @@
         "id": "Kj9eUkXgyC4g",
         "outputId": "90243091-b6f5-40d2-cf0d-9b8baedb35e1"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -535,7 +535,7 @@
         "id": "y1NkMyMR2pf-",
         "outputId": "78b60c5f-8b8f-4e4a-da0a-e4c6f86e0b0c"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,11 +612,108 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        " def execute_action(action):\n",
+        "    action = decide_action()\n",
+        "\n",
+        "    if action == \"직진\":\n",
+        "      print(\"8-4 직진\")\n",
+        "      y += 1\n",
+        "    elif action == \"좌회전\":\n",
+        "      print(\"8-5 좌회전\")\n",
+        "      x -= 1\n",
+        "    elif action == \"우회전\":\n",
+        "      print(\"8-6 우회전\")\n",
+        "      x += 1\n",
+        "    else:\n",
+        "      print(\"8-7 정지\")\n",
+        "\n",
+        "    return x, y\n",
+        "\n",
+        "\n",
+        "class SimpleCar:\n",
+        "  def __init__(self, name, x, y):\n",
+        "    self.name = name\n",
+        "    self.x = x\n",
+        "    self.y = y\n",
+        "\n",
+        "  def move_forward(self):\n",
+        "    self.y += 1\n",
+        "    print(f\"{self.name}이(가) 직진합니다. 현재 위치: ({self.x}, {self.y})\")\n",
+        "\n",
+        "  def turn_left(self):\n",
+        "    self.x -= 1\n",
+        "    print(f\"{self.name}이(가) 왼쪽으로 회전합니다. 현재 위치: ({self.x}, {self.y})\")\n",
+        "\n",
+        "  def turn_right(self):\n",
+        "    self.x += 1\n",
+        "    print(f\"{self.name}이(가) 오른쪽으로 회전합니다. 현재 위치: ({self.x}, {self.y})\")\n",
+        "\n",
+        "  def stop(self):\n",
+        "    print(\"정지\")\n",
+        "\n",
+        "  def execute_action(self, action):\n",
+        "    if action == \"직진\":\n",
+        "      self.move_forward()\n",
+        "    elif action == \"좌회전\":\n",
+        "      self.turn_left()\n",
+        "    elif action == \"우회전\":\n",
+        "      self.turn_right()\n",
+        "    else:\n",
+        "      self.stop()\n",
+        "\n",
+        "  def run_simulation(self,obstacles):\n",
+        "    i = 0\n",
+        "\n",
+        "    while i < 10:\n",
+        "      i += 1\n",
+        "      position = self.x\n",
+        "      update_sensor_data(position, obstacles)\n",
+        "      detect+ion_obstacles(sensors, safe_distance)\n",
+        "      decide_action(obstacles)\n",
+        "      execute_action(obstacles)\n",
+        "\n",
+        "\n",
+        "    print(\"시뮬레이션 종료\")\n"
+      ],
       "metadata": {
-        "id": "9OzNz4Hb24PX"
+        "id": "7s0hJ0NU1CgO"
       },
-      "execution_count": null,
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9번 https://claude.ai/public/artifacts/76eafd8d-4d90-437d-be19-5bf67c275500"
+      ],
+      "metadata": {
+        "id": "LOYrveLvvL5E"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class SimpleCar:\n",
+        "    # ... 생략 ...\n",
+        "\n",
+        "    def run_simulation(self, obstacles):\n",
+        "        for step in range(10):\n",
+        "            print(f\"\\n스텝{step+1}\")\n",
+        "            position = (self.x, self.y)\n",
+        "\n",
+        "            sensor_data = self.update_sensor_data(obstacles)\n",
+        "            detected = self.detect_obstacles(sensor_data)\n",
+        "            action = self.decide_action(detected)\n",
+        "            self.execute_action(action)\n",
+        "\n",
+        "            if action == \"정지\":\n",
+        "                break\n"
+      ],
+      "metadata": {
+        "id": "-3tbaRCQvPTb"
+      },
+      "execution_count": 20,
       "outputs": []
     }
   ]
